tests/lean/770.hlean.expected.out
770.hlean:17:14: error: function expected at
  0
